Fixed uneven spacing issues

--- a/src/components/AboutSection/styles.css
+++ b/src/components/AboutSection/styles.css
@@ -11,7 +11,7 @@
 .about-p-1,
 .about-p-2 {
 	opacity: 0;
-	margin: 1rem 0;
+	margin-top: 1rem;
 }
 
 .highlighted-text {
