--- a/src/components/ExperienceSection/styles.css
+++ b/src/components/ExperienceSection/styles.css
@@ -1,7 +1,7 @@
 .experience-container {
 	display: flex;
 	flex-direction: column;
-	gap: 2rem;
+	gap: 1.5rem;
 	opacity: 0;
 	animation: slide-down-on-load 0.5s linear 1.5s forwards;
 }
@@ -9,7 +9,7 @@
 .companies {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 0.5rem;
 }
 
 .company-logo {
