--- a/src/components/PageLayout/styles.css
+++ b/src/components/PageLayout/styles.css
@@ -11,7 +11,7 @@
 	.page-container {
 		padding: 2rem 2rem 6rem;
 		max-width: 720px;
-		gap: 3rem;
+		gap: 4rem;
 	}
 }
 
